<resources>
    <string name="app_name">urbandapp</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo_app">logo_app</string>
    <string name="registro_de_usuario">Registro de usuario</string>
</resources>
